--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -136,5 +136,24 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        app:layout_constraintTop_toBottomOf="@+id/weixinIdMenu"
+        android:layout_marginTop="@dimen/sub_menu_gap"
+        android:id="@+id/logOutButton"
+        android:background="@drawable/back_top_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/sub_menu_height">
+
+
+        <TextView
+            android:text="退出登录"
+            android:textColor="@color/sub_menu_text_color"
+            android:gravity="center_vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
+
 
 </LinearLayout>
