--- a/app/src/main/res/layout/item_list_contact.xml
+++ b/app/src/main/res/layout/item_list_contact.xml
@@ -4,12 +4,16 @@
     android:layout_height="60dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:background="@drawable/back_top_line"
     >
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@drawable/avatar2"
         android:id="@+id/avatar_icon"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         >
     </ImageView>
 
