--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -10,4 +10,10 @@
     <dimen name="sub_menu_icon_padding">5dp</dimen>
     <dimen name="sub_menu_arrow_padding">10dp</dimen>
     <dimen name="sub_menu_text_margin">5dp</dimen>
+
+    <dimen name="title_bar_txt_size">20sp</dimen>
+    <dimen name="default_btn_radius">5dp</dimen>
+    <dimen name="view_left_right_padding">28dp</dimen>
+    <dimen name="title_bar_height">48.5dp</dimen>
+    <dimen name="item_head_icon_size">40dp</dimen>
 </resources>
