--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -46,7 +46,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_add_people"
-            android:id="@+id/avatar_icon"
+            android:id="@+id/new_friend_icon"
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="15dp"
