--- a/app/src/main/res/layout/item_list_chat.xml
+++ b/app/src/main/res/layout/item_list_chat.xml
@@ -3,17 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@drawable/back_top_line"
+    android:paddingRight="10dp"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/avatar_icon"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:scaleType="fitCenter"
-        android:layout_gravity="center"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="15dp"
-        android:src="@drawable/avatar2" />
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="60dp"
+        android:layout_height="60dp">
+        <ImageView
+            android:id="@+id/avatar_icon"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:scaleType="fitCenter"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/avatar2" />
+
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
