--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,7 +33,7 @@
             android:textSize="18sp" />
 
         <ImageView
-            android:id="@+id/jmui_right_btn"
+            android:id="@+id/detail"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
