--- a/app/src/main/res/layout/item_discover_1.xml
+++ b/app/src/main/res/layout/item_discover_1.xml
@@ -47,12 +47,7 @@
             android:id="@+id/image1"
             android:src="@drawable/image1"></ImageView>
 
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:gravity="end"
-            android:layout_marginTop="8dp"
-            android:text="1小时前" />
+        <include layout="@layout/discover_detail"/>
+
     </LinearLayout>
 </LinearLayout>
