--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -56,6 +56,16 @@
         android:background="#fff"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/action"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:background="@drawable/ic_add"
+            android:backgroundTint="@color/colorPrimary"
+            app:tint="@color/colorPrimary" />
+
         <EditText
             android:id="@+id/edit"
             android:layout_height="50dp"
