--- a/app/src/main/res/layout/item_list_chat.xml
+++ b/app/src/main/res/layout/item_list_chat.xml
@@ -57,6 +57,8 @@
             android:paddingBottom="10dp"
             android:textSize="12sp"
             android:gravity="center_vertical"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="@string/sentence1" />
     </LinearLayout>
 
