--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -98,8 +98,8 @@
 
     <RelativeLayout
         app:layout_constraintTop_toBottomOf="@+id/weixinIdMenu"
+        android:id="@+id/user_action"
         android:layout_marginTop="@dimen/sub_menu_gap"
-        android:id="@+id/logOutButton"
         android:background="@drawable/back_top_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/sub_menu_height">
@@ -107,7 +107,43 @@
 
         <TextView
             android:text="添加好友/发消息"
-            android:id="@+id/user_action"
+            android:id="@+id/user_action_text"
+            android:textColor="@color/sub_menu_text_color"
+            android:gravity="center_vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        app:layout_constraintTop_toBottomOf="@+id/weixinIdMenu"
+        android:id="@+id/deleteTimeLine"
+        android:layout_marginTop="@dimen/sub_menu_gap"
+        android:background="@drawable/back_top_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/sub_menu_height">
+
+
+        <TextView
+            android:text="删除历史消息"
+            android:textColor="@color/sub_menu_text_color"
+            android:gravity="center_vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        app:layout_constraintTop_toBottomOf="@+id/weixinIdMenu"
+        android:id="@+id/syncTimeLine"
+        android:layout_marginTop="@dimen/sub_menu_gap"
+        android:background="@drawable/back_top_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/sub_menu_height">
+
+
+        <TextView
+            android:text="同步消息"
             android:textColor="@color/sub_menu_text_color"
             android:gravity="center_vertical"
             android:layout_centerHorizontal="true"
