--- a/app/src/main/res/layout/activity_new_friend.xml
+++ b/app/src/main/res/layout/activity_new_friend.xml
@@ -90,6 +90,28 @@
 
     </LinearLayout>
 
+
+    <LinearLayout android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="60dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/sub_menu_gap"
+        android:background="@drawable/back_top_line"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
+            android:text="好友申请"
+            android:textSize="18sp"
+            android:textStyle="bold"></TextView>
+
+    </LinearLayout>
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/new_friends_recylerview"
         android:layout_marginTop="@dimen/sub_menu_gap"
