--- a/app/src/main/res/layout/item_list_contact.xml
+++ b/app/src/main/res/layout/item_list_contact.xml
@@ -24,7 +24,23 @@
         android:layout_marginStart="8dp"
         android:gravity="center"
         android:text="昵称"
+        android:layout_weight="2"
+        android:textAlignment="textStart"
         android:textSize="18sp"
         android:textStyle="bold"></TextView>
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:background="@drawable/btn_custom"
+        android:padding="0dp"
+        android:text="删除"
+        android:textSize="16sp"
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
