--- a/app/src/main/res/layout/item_list_like.xml
+++ b/app/src/main/res/layout/item_list_like.xml
@@ -2,14 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:layout_marginRight="10dp"
     android:layout_height="wrap_content">
 
     <TextView
-        android:layout_margin="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello"
         android:id="@+id/name"
-        android:textColor="@color/colorPrimaryDark"
-        ></TextView>
+        android:textColor="@color/colorPrimaryDark" />
 </androidx.constraintlayout.widget.ConstraintLayout>
