--- a/app/src/main/res/layout/my_message.xml
+++ b/app/src/main/res/layout/my_message.xml
@@ -24,6 +24,7 @@
         android:layout_toStartOf="@+id/avatar"
         android:elevation="2dp"
         android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:textSize="18dp"
         android:text="Hello"
         />
